# ROB1-AC-groupname

./: README.md  prelim.repos  project.repos
prelim/py_stupidobstacleavoidance/: package.xml  setup.cfg  setup.py
py_stupidobstacleavoidance/launch/: run_map.launch.py  smart_bot.launch.py  smatbot.launch.py
py_stupidobstacleavoidance/py_stupidobstacleavoidance/: my_smart_bot.py
wall_follower/: Dockerfile  README.md  TODO  docker-compose.yml  package.xml  setup.py  tools.py
wall_follower/Shapes/: point.py  wall.py
wall_follower/config/: mapper_config.yaml  turtlebot3_lds_2d.lua
wall_follower/launch/: auto_mapping.launch.py  map_without_nav2.launch.py  start_cartographer.launch.py  start_map.launch.py  start_navigation.launch.py  start_navigation_through_map.launch.py  start_rviz2.launch.py  wall_follower.launch.py
wall_follower/wall_follower/: nav2_wall_follower.py  tools.py  wall_follower.py
wall_follower/wall_follower/Shapes/: wall.py
wall_follower/worlds/: challenge_maze.burger.world  challenge_maze.world
workshop/: package.xml  setup.py
workshop/launch/: smatbot.launch.py
workshop/py_stupidobstacleavoidance/: my_smart_bot.py
workshop/workshop/: my_smart_bot.py
worlds/: challenge_maze.burger.world
