<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>workshop</name>
  <version>1.0.0</version>
  <description>Node to move forward and turn if a wall is detected on the trajectory</description>
  <maintainer email="alexis1.craye@epitech.eu">alexis</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
